--- a/src/css/index.css
+++ b/src/css/index.css
@@ -9,33 +9,55 @@
   -webkit-box-sizing: border-box;
   -moz-box-sizing: border-box;
 }
+::-webkit-scrollbar { width: 5px; height: 5px;}
+// ::-webkit-scrollbar-track-piece { background-color: #eee;}
+::-webkit-scrollbar-thumb {height: 5px; background-color: #888; -webkit-border-radius: 5px;}
+
+#header {
+  position: relative;
+  height: 20px;
+  box-shadow: 0px 2px 0 rgba(234, 204, 225, 0.49);
+  z-index: 100;
+  width: 100vw;
+  background: #f581c1;
+  color: white;
+  padding-left: 60px;
+  padding-right: 8px;
+  font-size: 12px;
+  line-height: 20px;
+}
+
 #left-panel {
+  position: relative;
   font-size: 16px;
-  cursor:auto;
+  cursor: auto;
   float: left;
-  height: 100vh;
-  padding: 10px 10px;
+  height: 100%;
+  overflow: hidden;
 }
 #write {
+  padding: 8px 8px;
   font-size: 16px;
   outline: none;
   border: none;
   resize: none;
   width: 100%;
-  height: 100vh;
-  overflow: scroll;
+  height: 100%;
 }
 #resize-panel {
+  position: relative;
   float: left;
   cursor: col-resize;
-  width: 5px;
   background: #ddd;
   height: 100vh;
 }
 #right-panel {
-  height: 100vh;
+  cursor: auto;
+  float: left;
+  position: relative;
+  height: 100%;
   overflow: scroll;
 }
 #preview {
-  padding: 10px 10px;
+  padding: 8px 8px;
 }
