--- a/src/view/index.html
+++ b/src/view/index.html
@@ -10,7 +10,8 @@
 
 <body style="height: 100vh; overflow: hidden;">
     <div id="header">
-        Menu | Edit | View | Help
+        <span style="position: absolute; left: 60px;">Menu | Edit</span>
+        <span id="header-title"></span>
     </div>
     <div id="main-container" style="height: calc(100vh - 20px);">
         <div id="left-panel" style="width: calc(50% - 1.5px);">
