--- a/src/view/index.html
+++ b/src/view/index.html
@@ -9,16 +9,16 @@
 </head>
 
 <body style="height: 100vh; overflow: hidden;">
-    <div id="header">
-        <span style="position: absolute; left: 60px;">Menu | Edit</span>
+    <div id="header" style="-webkit-app-region: drag">
+        <span style="position: absolute; top: 2px; left: 70px;">Menu | Edit</span>
         <span id="header-title"></span>
     </div>
     <div id="main-container" style="height: calc(100vh - 20px);">
-        <div id="left-panel" style="width: calc(50% - 1.5px);">
+        <div id="left-panel" style="width: calc(50% - 1.5px); -webkit-app-region: no-drag">
             <textarea id="write" oninput="this.editor.update()" placeholder="Write MarkDown Here..."></textarea>
         </div>
         <div id="resize-panel" style="width: 3px"></div>
-        <div id="right-panel" style="width: calc(50% - 1.5px);">
+        <div id="right-panel" style="width: calc(50% - 1.5px); -webkit-app-region: no-drag">
             <!-- <div style="text-align: center">
                 <span style="font-size: 10px; padding: 5px 5px;">预览</span>
             </div> -->
