--- a/src/css/index.css
+++ b/src/css/index.css
@@ -15,20 +15,20 @@
 
 #header {
   position: relative;
-  height: 20px;
-  box-shadow: 0px 2px 0 rgba(234, 204, 225, 0.49);
+  height: 22px;
+  box-shadow: 0px 2px 0 rgba(197, 188, 193, 0.45);
   z-index: 100;
   width: 100vw;
-  background: #f581c1;
+  background: #6f6b6d42;
   color: white;
   font-size: 12px;
-  line-height: 20px;
+  line-height: 22px;
   text-align: center;
 }
 
 #left-panel {
   position: relative;
-  font-size: 12px;
+  font-size: 15px;
   cursor: auto;
   float: left;
   height: 100%;
@@ -36,7 +36,7 @@
 }
 #write {
   padding: 8px 8px;
-  font-size: 12px;
+  font-size: 15px;
   outline: none;
   border: none;
   resize: none;
@@ -59,5 +59,5 @@
 }
 #preview {
   padding: 8px 8px;
-  font-size: 12px;
+  font-size: 15px;
 }
