--- a/src/view/index.html
+++ b/src/view/index.html
@@ -6,6 +6,12 @@
     <title>Editor~</title>
     <link rel="stylesheet" type="text/css" href="../css/index.css">
     <link rel="stylesheet" type="text/css" href="../css/markdown.css">
+    <link rel="stylesheet" type="text/css" href="../../node_modules/codemirror/lib/codemirror.css">
+    <link rel="stylesheet" type="text/css" href="../../node_modules/codemirror/theme/neo.css">
+    <script type="text/javascript" src="../../node_modules/codemirror/lib/codemirror.js"></script>
+    <script type="text/javascript" src="../../node_modules/codemirror/mode/markdown/markdown.js"></script>
+    <script type="text/javascript" src="../../node_modules/codemirror/mode/xml/xml.js"></script>
+    <script type="text/javascript" src="../../node_modules/codemirror/addon/edit/continuelist.js"></script>
 </head>
 
 <body style="height: 100vh; overflow: hidden;">
@@ -23,11 +29,14 @@
                 <span style="font-size: 10px; padding: 5px 5px;">预览</span>
             </div> -->
             <div id="preview"></div>
+
         </div>
     </div>
     <script type="text/javascript" src="../../node_modules/markdown-it/dist/markdown-it.js"></script>
     <script type="text/javascript" src="../js/tab.js"></script>
     <script type="text/javascript" src="../js/index.js"></script>
+
+
 </body>
 
 </html>
